--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,12 @@
     "version": 2,
     "builds": [
       {
-        "src": "api/index.py",
+        "src": "app/main.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "api/index.py" }
+      { "src": "/(.*)", "dest": "app/main.py" }
     ]
   }
   
